app/hub/Views/BrowserCreateAccountView/BrowserCreateAccountView.scss
/**
 * Browser Create Account View Sass
 *
 * Ghostery Browser Extension
 * https://www.ghostery.com/
 *
 * Copyright 2019 Ghostery, Inc. All rights reserved.
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0
 */

$color-create-account-form-error-red: #e74055;

// Browser Create Account View
.BrowserCreateAccountView__title {
	display: flex;
	justify-content: center;
	font-size: 24px;
	font-weight: 600;
}
.BrowserCreateAccountView__subtitle {
	margin-top: 10px;
	display: flex;
	justify-content: center;
	font-size: 18px;
}
.BrowserCreateAccountView__alreadyHaveAccount {
	margin-top: 38px;
	color: $ghosty-blue;
	text-decoration: underline;
	cursor: pointer;
}
.BrowserCreateAccountView {
	padding-top: 80px;
	padding-bottom: 40px;
}
.BrowserCreateAccountView--addPaddingTop {
	padding-top: 20px;
}
.BrowserCreateAccountView--addMarginSide {
	margin-left: 10px;
	margin-right: 10px;
}
.BrowserCreateAccountView--addMarginBottom {
	margin-bottom: 20px;
}
.BrowserCreateAccountView__headerImage {
	max-width: 180px;
}
.BrowserCreateAccountView__headerTitle h3 {
	font-size: 24px;
	line-height: 1.75;
	color: #4a4a4a;
	margin: 0 25px;
}
.BrowserCreateAccountView__inputLabel {
	font-size: 14px;
	font-weight: 500;
	line-height: 2.86;
	text-transform: uppercase;
	color: #4a4a4a;
}
.BrowserCreateAccountView__inputBox {
	font-size: 14;
	line-height: 24px;
	color: #4a4a4a;

	// Foundation Overrides
	border-radius: 6px;
	box-shadow: none;
	border: 1px solid #9b9b9b;

	&::placeholder {
		color: #c4ced1;
	}
}
.BrowserCreateAccountView__inputBox.error {
	margin-bottom: 8px;
	border-color: $color-create-account-form-error-red;
}
.BrowserCreateAccountView__inputBox:focus {
	// Foundation Overrides
	box-shadow: none;
	border-color: $color-create-account-form-error-red;
}
.BrowserCreateAccountView__inputError {
	font-size: 12;
	line-height: 14px;
	color: $color-create-account-form-error-red;
	margin-bottom: 13px;
}
.BrowserCreateAccountView__promoString {
	margin-top: 15px;
}
.BrowserCreateAccountView__link {
	font-size: 14px;
	line-height: 30px;
}
.BrowserCreateAccountView__termsStatement {
	font-size: 12px;
}
.BrowserCreateAccountView__button {
	min-width: 180px;
}
.BrowserCreateAccountView__inputLabel {
	flex-grow: 1; // ensure left-justify alignment in single column layout
	padding-top: 10px; // align with checkbox top
}
.BrowserCreateAccountView__inputLabel.error{
	color: $color-create-account-form-error-red;
}
.BrowserCreateAccountView__ctaButtonContainer {
	display: flex;
	justify-content: center;

	.BrowserCreateAccountView__ctaButton {
		margin: 48px auto 0 auto;
		height: 44px;
		width: 162px;
		padding: 7.7px 14px;
		line-height: 22px;
		background: linear-gradient(
			45deg,
			#ff7e74 50%,
			#00aef0
		);
		background-size: 200% 100%;
		background-position: 100% 50%;
		transition: 0.25s all;
		border: none;
		&:hover {
			background-position: 0% 50%;
			transition: 0.25s all;
		}
		color: #FFF;
		font-size: 14.1px;
		font-weight: 700;
		border-radius: 3.5px;
		text-align: center;
		line-height: 2.05;
		cursor: pointer;
	}
}
.BrowserCreateAccountView__skip {
	margin-top: -37px;
	float: right;
	font-size: 16px;
	color: $ghosty-blue;
	text-decoration: underline;
	cursor: pointer;
}
.BrowserCreateAccountView__learnMoreContainer {
	margin: 25px auto 0 auto;
	width: 251px;
	text-align: center;
}
.BrowserCreateAccountView__learnMore {
	font-size: 16px;
	color: $ghosty-blue;
	text-decoration: underline;
	cursor: pointer;
}
.BrowserCreateAccountView__arrow {
	margin: 15px auto 0 auto;
	height: 12px;
	width: 12px;
	border-left: 2px solid #00aef0;
	border-top: 2px solid #00aef0;
	cursor: pointer;

	&.up {
		transform: rotate(45deg);
	}
	&.down {
		transform: rotate(225deg);
	}
}
.BrowserCreateAccountView__FAQContainer {
	margin-top: 10px;
	padding-top: 20px;
	@include breakpoint(small down) {
		text-align: center;
	}
}
.BrowserCreateAccountView__faqItemContainer {
	margin-bottom: 30px;
}
.BrowserCreateAccountView__faqIcon {
	height: 71px;
	width: 71px;
	min-height: 71px;
	min-width: 71px;
	margin-bottom: 10px;
}
.BrowserCreateAccountView__faqItemTextContainer {
	display: flex;
	flex-direction: column;
}
.BrowserCreateAccountView__faqItemLabel {
	font-size: 18px;
	font-weight: 600;
	color: #4a4a4a;
}
.BrowserCreateAccountView__faqItemDescription {
	margin-top: 10px;
	max-width: 607px;
	font-size: 16px;
	color: #4a4a4a;
}
@media only screen and (max-width: 740px)  {
	.BrowserCreateAccountView {
		margin-bottom: 40px;
		padding-top: 20px;
	}
	.BrowserCreateAccountView__header {
		flex-direction: column;
	}
	.BrowserCreateAccountView__headerTitle {
		padding-top: 30px;
		text-align: center;
	}
	.BrowserCreateAccountView__submit {
		display: flex;
		justify-content: center;
	}
	.BrowserCreateAccountView__checkboxContainer {
		display: flex;
		align-items: center;
		padding-right: 12px;
		justify-content: center;
	}
	.BrowserCreateAccountView__linkContainer {
		text-align: center;
	}
}
@media only screen and (max-width: 500px)  {
	.BrowserCreateAccountView__headerTitle h3 {
		font-size: 20px;
		margin: 0 10px;
	}
}

